weather-app/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-ui
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: weatherapp-ui
